# pg-checkers

./: .gitignore  CMakeLists.txt  Engine.cu  Engine.cuh  GameState.cu  GameState.cuh  Logger.cu  Logger.cuh  Node.cu  Node.cuh  Window.cu  Window.cuh  log_time  log_winrate  main.cu  script.py
